# febpf

./: .gitignore  Cargo.toml  HANDOFF.md  README.md  cmds.txt  x
.github/workflows/: ci.yml
docs/: ideas.md
docs/specs/: af-xdp-copy.md  btf-ctx-pointers.md  c-api.md  c-log-filter.md  c-map-control.md  conftest.md  core-relocations.md  corpus-tooling.md  dataflow-queries.md  elf-loading.md  embedding-parity-roadmap.md  equiv-optimizer.md  execution-addons.md  iterator-contexts.md  jit-backend.md  legacy-packet-loads.md  map-effects.md  map-in-map.md  map-types-2.md  map-types-3.md  map-types.md  operator-soundness.md  packet-providers.md  queue-map-xvs.md  race-explorer.md  rbpf-0.4.1-legacy-audit.md  rbpf-backend-parity.md  rbpf-feature-parity.md  replay-files.md  rodata-dce.md  scalar-identity.md  skb-packet-access.md  source-debug.md  strict-superset-closure.md  tail-calls.md  time-travel-debug.md  tracing-helpers.md  uninitialized-stack-policy.md  verifier-diff.md  verifier-explainer.md  (+6 more)
examples/: fib.s  optimizable.s  proto_count.s  race_atomic.s  race_rmw.s  sum_loop.s
examples/c/: attach_target.c  btf_maps.c  btfctx.c  core_probe.c  core_target.c  core_task.c  global_data.c  hash_of_maps.c  hash_of_maps_bad_init.c  hash_of_maps_init.c  kconfig.c  kfunc.c  kfunc_target.c  legacy_maps.c  multi_entry.c  rodata_dce.c  spin_lock.c  subprog.c  tail_call.c
examples/c-attach-host/: main.c
examples/c-elf-host/: main.c
examples/c-helper-host/: main.c
examples/c-host/: main.c
examples/c-log-filter/: filter.s  main.c
examples/c-map-host/: main.c
include/: febpf.h
perf/: Cargo.toml  README.md  run
perf/benches/: engine.rs
scripts/: fetch-corpus.sh  scan-corpus.sh  test-c-api.sh
src/: af_xdp.rs  analysis.rs  asm.rs  btf.rs  builder.rs  c_api.rs  conftest.rs  dce.rs  debug.rs  debuginfo.rs  disasm.rs  effects.rs  elf.rs  equiv.rs  execution.rs  fuzz.rs  helpers.rs  insn.rs  interp.rs  kbpf.rs  lanes.rs  lib.rs  main.rs  maps.rs  optimize.rs  packet.rs  pcap.rs  playground.rs  race.rs  relo.rs  replay.rs  soundness.rs  tnum.rs  verifier.rs  wasm.rs
src/jit/: aarch64.rs  abi.rs  classify.rs  mod.rs  x64.rs
tests/: btf.rs  btfctx.rs  conftest.rs  corpus_tooling.rs  dataflow.rs  dce.rs  debugger.rs  elf.rs  embedding.rs  equiv_optimize.rs  external_regions.rs  integration.rs  jit.rs  legacy_packet.rs  metadata.rs  playground.rs  race.rs  replay.rs  sourcedebug.rs  timetravel.rs  verification_policy.rs
tests/common/: mod.rs
web/: Makefile  febpf.js  index.html
web/test/: smoke.sh
web/test/abi-harness/: Cargo.toml
web/test/abi-harness/src/: main.rs
