[package]
name = "febpf"
version = "0.1.0"
edition = "2021"
description = "Fast userland eBPF engine with built-in verifier, debugger and program analysis"
license = "MIT OR Apache-2.0"

[lib]
name = "febpf"
path = "src/lib.rs"
# rlib for the binary and tests; cdylib so `--target wasm32-unknown-unknown`
# emits a .wasm exporting the hand-written extern "C" ABI (see src/wasm.rs).
crate-type = ["rlib", "cdylib"]

[features]
default = ["jit"]
# The native JIT (x86-64 Linux, arm64 macOS). Off for the wasm build, which is
# pure-std interpreter + verifier + analysis.
jit = []

[[bin]]
name = "febpf"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1
