[package]
name = "febpf"
version = "0.1.0"
edition = "2021"
description = "Fast userland eBPF engine with built-in verifier, debugger and program analysis"
license = "MIT OR Apache-2.0"

[lib]
name = "febpf"
path = "src/lib.rs"
# rlib for the binary and tests; cdylib so `--target wasm32-unknown-unknown`
# emits a .wasm exporting the hand-written extern "C" ABI (see src/wasm.rs).
crate-type = ["rlib", "cdylib"]

[features]
default = ["jit"]
# The native JIT (x86-64 Linux, arm64 Linux/macOS). Unsupported targets keep a
# compile-time-compatible stub; portable interpreter-only builds (including
# Windows and wasm) use `--no-default-features`.
jit = []

[[bin]]
name = "febpf"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1
