[package]
name = "febpf"
version = "0.1.0"
edition = "2021"
description = "Fast userland eBPF engine with built-in verifier, debugger and program analysis"
license = "MIT OR Apache-2.0"

[lib]
name = "febpf"
path = "src/lib.rs"
# Keep the library embeddable on allocator-providing `no_std` targets. The web
# build requests `cdylib` explicitly when emitting the wasm ABI artifact.
crate-type = ["rlib"]

[features]
default = ["std", "jit"]
std = []
# The native JIT (x86-64 Linux, arm64 Linux/macOS). Unsupported targets keep a
# compile-time-compatible stub; portable interpreter-only builds (including
# Windows and wasm) use `--no-default-features --features std`.
jit = ["std"]
# Linux AF_XDP copy-mode transport. This remains opt-in so the core library
# keeps its allocator-only, platform-neutral dependency surface.
af-xdp = ["std"]
# Native, hand-written C ABI. Library artifact selection remains explicit via
# `cargo rustc -- --crate-type=cdylib|staticlib` so no-std rlib builds are not
# forced to provide a native allocator or panic runtime.
c-api = ["std"]

[[bin]]
name = "febpf"
path = "src/main.rs"
required-features = ["std"]

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1
